rehome/assets/scss/main.scss
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap');

:root {
    --primary-bg-color: #eeeeee;
    --primary-text-color: #000000;
    --secondary-text-color: #757575;
    --primary-color: #ff5995;
    --accent-color: #ba2d65;
    --border-color: #cccccc;
    --image-border-color: #ff5995;

    //@media (prefers-color-scheme: dark) {
    //    --primary-bg-color: #121212;
    //    --primary-text-color: #ffffff;
    //    --secondary-text-color: #868686;
    //    --border-color: #444;
    //}
}

html {
    background: var(--primary-bg-color);
    line-height: 1.2;
    font-size: 1.2em;
    color: var(--primary-text-color);
}

html, button, input, select, textarea,
.pure-g [class *= "pure-u"] {
    font-family: 'Roboto', sans-serif;
}

hr.divider {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid var(--border-color);
}

a {
    text-decoration: none;
    color: var(--primary-color);

    &:visited {
        color: var(--primary-color);
    }

    &:hover {
        color: var(--accent-color);
        text-decoration: underline;
    }
}

.content {
    margin: 1em;

    &-title {
        font-weight: bold;
        font-size: 1.1em;
    }

    &-body {
        text-align: center;
    }
}

.footer-quote {
    margin: 1em;
    color: var(--secondary-text-color);
    font-size: 0.9em;
}

.vertical-center {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: inline;
}

.text-center {
    text-align: center;
}

.profile-links {
    margin: 1em;

    &:before, &:after {
        color: var(--secondary-text-color);
    }

    &:before {
        content: "[";
    }

    &:after {
        content: "]";
    }

    &-item {
        padding: .2em .2em;

        &:hover {
            background: none;
        }
    }
}

.img-avatar-container {
    max-width: 10em;
    margin: auto auto 1em;
}

.img-avatar {
    border-radius: 50%;
    border-width: 2px;
    border-color: var(--image-border-color);
    border-style: solid;

    &:hover {
        transition: all 250ms ease;
        filter: brightness(80%);
    }
}

